k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fschallengeapp
  namespace: production
  labels:
    app: fschallengeapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fschallengeapp
  template:
    metadata:
      labels:
        app: fschallengeapp
    spec:
      containers:
      - name: fscontainer
        image: ghcr.io/daniel55247/fslabchallenge/fslabimagechallenge:latest
        ports:
        - containerPort: 8080
        command ["nginx", "-g", "daemon off;"]
