k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fschallengeservice
  namespace: production
spec:
  selector:
    app.kubernetes.io/name: fschallengeapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
